logs/dag_id=booking_ingestion_v3/run_id=manual__2023-11-10T02:28:46.037801+00:00/task_id=copy_data_to_postgres/attempt=6.log
[2023-11-10T03:11:56.250+0000] {taskinstance.py:1159} INFO - Dependencies all met for dep_context=non-requeueable deps ti=<TaskInstance: booking_ingestion_v3.copy_data_to_postgres manual__2023-11-10T02:28:46.037801+00:00 [queued]>
[2023-11-10T03:11:56.274+0000] {taskinstance.py:1159} INFO - Dependencies all met for dep_context=requeueable deps ti=<TaskInstance: booking_ingestion_v3.copy_data_to_postgres manual__2023-11-10T02:28:46.037801+00:00 [queued]>
[2023-11-10T03:11:56.276+0000] {taskinstance.py:1361} INFO - Starting attempt 6 of 7
[2023-11-10T03:11:56.321+0000] {taskinstance.py:1382} INFO - Executing <Task(PostgresOperator): copy_data_to_postgres> on 2023-11-10 02:28:46.037801+00:00
[2023-11-10T03:11:56.336+0000] {standard_task_runner.py:57} INFO - Started process 457 to run task
[2023-11-10T03:11:56.342+0000] {standard_task_runner.py:84} INFO - Running: ['***', 'tasks', 'run', 'booking_ingestion_v3', 'copy_data_to_postgres', 'manual__2023-11-10T02:28:46.037801+00:00', '--job-id', '16', '--raw', '--subdir', 'DAGS_FOLDER/main.py', '--cfg-path', '/tmp/tmpufo6jut7']
[2023-11-10T03:11:56.345+0000] {standard_task_runner.py:85} INFO - Job 16: Subtask copy_data_to_postgres
[2023-11-10T03:11:56.506+0000] {task_command.py:416} INFO - Running <TaskInstance: booking_ingestion_v3.copy_data_to_postgres manual__2023-11-10T02:28:46.037801+00:00 [running]> on host a3e6249bf7b5
[2023-11-10T03:11:56.683+0000] {taskinstance.py:1662} INFO - Exporting env vars: AIRFLOW_CTX_DAG_OWNER='mike' AIRFLOW_CTX_DAG_ID='booking_ingestion_v3' AIRFLOW_CTX_TASK_ID='copy_data_to_postgres' AIRFLOW_CTX_EXECUTION_DATE='2023-11-10T02:28:46.037801+00:00' AIRFLOW_CTX_TRY_NUMBER='6' AIRFLOW_CTX_DAG_RUN_ID='manual__2023-11-10T02:28:46.037801+00:00'
[2023-11-10T03:11:56.689+0000] {sql.py:274} INFO - Executing: 
            COPY booking_record FROM %(file_path)s DELIMITER ',' CSV HEADER;
            
[2023-11-10T03:11:56.718+0000] {base.py:73} INFO - Using connection ID 'postgres_localhost' for task execution.
[2023-11-10T03:11:56.901+0000] {base.py:73} INFO - Using connection ID 'postgres_localhost' for task execution.
[2023-11-10T03:11:56.991+0000] {sql.py:418} INFO - Running statement: 
            COPY booking_record FROM %(file_path)s DELIMITER ',' CSV HEADER;
            , parameters: None
[2023-11-10T03:11:57.002+0000] {taskinstance.py:1937} ERROR - Task failed with exception
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/providers/common/sql/operators/sql.py", line 280, in execute
    output = hook.run(
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/providers/common/sql/hooks/sql.py", line 392, in run
    self._run_command(cur, sql_statement, parameters)
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/providers/common/sql/hooks/sql.py", line 423, in _run_command
    cur.execute(sql_statement)
psycopg2.errors.SyntaxError: syntax error at or near "%"
LINE 2:             COPY booking_record FROM %(file_path)s DELIMITER...
                                             ^

[2023-11-10T03:11:57.066+0000] {taskinstance.py:1400} INFO - Marking task as UP_FOR_RETRY. dag_id=booking_ingestion_v3, task_id=copy_data_to_postgres, execution_date=20231110T022846, start_date=20231110T031156, end_date=20231110T031157
[2023-11-10T03:11:57.127+0000] {standard_task_runner.py:104} ERROR - Failed to execute job 16 for task copy_data_to_postgres (syntax error at or near "%"
LINE 2:             COPY booking_record FROM %(file_path)s DELIMITER...
                                             ^
; 457)
[2023-11-10T03:11:57.169+0000] {local_task_job_runner.py:228} INFO - Task exited with return code 1
[2023-11-10T03:11:57.218+0000] {taskinstance.py:2778} INFO - 0 downstream tasks scheduled from follow-on schedule check
